--- a/app/src/main/res/layout/activity_recyc.xml
+++ b/app/src/main/res/layout/activity_recyc.xml
@@ -1,12 +1,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:background="#FB8C00"
     android:layout_height="match_parent">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_gravity="center_vertical"
-        android:src="@drawable/venus" />
+        android:src="@drawable/ic_abstract" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recList"
